[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onlysavemevods"
version = "0.1.0"
description = "Watch YouTube channels and automatically record live streams with yt-dlp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "yt-dlp[default]>=2024.01.01",
  "Pillow>=10.0.0",
  "numpy>=1.26",
  "opencv-python-headless>=4.9.0",
]

[project.optional-dependencies]
voice-match = [
  "pyannote.audio>=3.1.0",
]

[project.scripts]
onlysavemevods = "onlysavemevods.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
