[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onlysavemevods"
version = "0.1.0"
description = "Watch streamer sources and automatically record live streams with yt-dlp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "yt-dlp[default]>=2024.01.01",
  "Pillow>=10.0.0",
  "numpy>=1.26",
  "opencv-python-headless>=4.9.0",
]

[project.optional-dependencies]
voice-match = [
  "pyannote.audio>=4.0.0,<5.0",
  "huggingface-hub>=0.34.0,<1.0",
  "torch~=2.8.0",
  "torchaudio~=2.8.0",
  "torchcodec>=0.6.0,<0.8.0; (sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32'",
]

[project.scripts]
onlysavemevods = "onlysavemevods.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onlysavemevods = [
  "Favicon.png",
  "favicon.ico",
  "favicon-16x16.png",
  "favicon-32x32.png",
  "apple-touch-icon.png",
  "android-chrome-192x192.png",
  "android-chrome-512x512.png",
]
